--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.5",
-    "node-gyp": "^9.0.0"
+    "node-gyp": "^9.0.0",
+    "ts-node": "^10.8.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -48,7 +49,6 @@
     "prettier": "^2.6.2",
     "supertest": "^6.0.1",
     "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
     "typescript": "^4.1.2"
   }
 }
